--- a/Info.plist
+++ b/Info.plist
@@ -48,7 +48,7 @@
 	<!-- Specify an icon file.  This is used to display your input method in the International Preference Input Menu panel. -->
 	<!--                                                -->
 	<key>tsInputMethodIconFileKey</key>
-	<string>nine.tiff</string>
+	<string>icon.pdf</string>
 	<!--                                                -->
 	<!-- The next required entry in the Info.plist XML file is your input method's character repertoire.  -->
 	<!-- This is an array of ISO language codes         -->
