--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>icon.pdf</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.ngochin.inputmethod.BoGo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
